--- a/index.adoc
+++ b/index.adoc
@@ -1,3 +1,9 @@
-# blog
+= Blog
+:showtitle:
+:page-title: My tech Blog
+:page-description: Things I want to remember and share
 
-* [A traceable Service with Rust and OpenTelemetry](tracing/)
+You've successfully set up and deployed an Jekyll website powered by AsciiDoc using the https://github.com/asciidoctor/jekyll-asciidoc-quickstart[*Jekyll AsciiDoc Quickstart*] project. If everything is in order then changes to the AsciiDoc content will be automatically published to your `gh_pages` branch and hosted via Jekyll and Github.
+
+
+* link:tracing/[First]
