try direct link

--- a/index.adoc
+++ b/index.adoc
@@ -6,4 +6,4 @@
 You've successfully set up and deployed an Jekyll website powered by AsciiDoc using the https://github.com/asciidoctor/jekyll-asciidoc-quickstart[*Jekyll AsciiDoc Quickstart*] project. If everything is in order then changes to the AsciiDoc content will be automatically published to your `gh_pages` branch and hosted via Jekyll and Github.
 
 
-* link:blog/tracing/[First]
+* link:blog/tracing/index.html[First]
