--- a/_drafts/subpages/server-side.adoc
+++ b/_drafts/subpages/server-side.adoc
@@ -1,14 +1,20 @@
 == Usage on Server Side
-Just a few words about the server side. There is widespread documentation about it.
+As there is widespread documentation about using tower on the server side just a few words about it.
 
+.Documentation
 - https://docs.rs/axum/latest/axum/middleware/index.html[in Axum docs about middleware]
 - https://hyper.rs/guides/1/server/middleware/[in Hyper Guides]
 
-They all integrate fine with tower services. For example hyper Server https://docs.rs/hyper/latest/hyper/server/conn/http1/struct.Builder.html#method.serve_connection[serve_connection] accepts a Hyper Service. But if you have to adapt a tower service for it you can use the solution described in the guide above. 
+They all integrate fine with tower services. For example hyper Server https://docs.rs/hyper/latest/hyper/server/conn/http1/struct.Builder.html#method.serve_connection[serve_connection] accepts a HyperService. But if you have to adapt a tower service for it you can use the solution described in the guide above. 
 
-Axum states
+For Axum they state
 [quote]
+****
 [...] what sets axum apart from other frameworks. axum doesn’t have its own middleware system but instead uses tower::Service.
+
+link:https://docs.rs/axum/0.8.1/axum/index.html[axum]
+****
+
 
 Therefore for Server usage there is plenty of information.
 
