--- a/_drafts/subpages/server-side.adoc
+++ b/_drafts/subpages/server-side.adoc
@@ -7,7 +7,7 @@ As there is widespread documentation about using tower on the server side just a
 
 They all integrate fine with tower services. For example hyper Server https://docs.rs/hyper/latest/hyper/server/conn/http1/struct.Builder.html#method.serve_connection[serve_connection] accepts a HyperService. But if you have to adapt a tower service for it you can use the solution described in the guide above. 
 
-For Axum they state
+For Axum it is stated
 [quote]
 ****
 [...] what sets axum apart from other frameworks. axum doesn’t have its own middleware system but instead uses tower::Service.
